[package]
name = "shellcode-loader"
version = "0.2.0"
edition = "2024"

description = "shellcode加载器，包含hook加载和loader加载"
license = "MIT" 
authors = ["hit_ljx@yeah.net"]
repository = "https://github.com/hbesljx/shellcode-loader.git"
keywords = ["shellcode", "loader","binary","hook"]

[dependencies.windows]
version = "0.52.0" 
features = [
    "Win32_Foundation", 
    "Win32_UI", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Threading", 
    "Win32_System_Memory",
    "Win32_Security"
] 
