[package]
name = "shellcode-loader"
version = "0.3.0"
edition = "2024"

description = "shellcode加载器，通过多种方式加载shellcode并对抗EDR检测"
license = "MIT" 
authors = ["hit_ljx@yeah.net"]
repository = "https://github.com/hbesljx/shellcode-loader"
keywords = ["shellcode", "loader","binary","hook"]

[dependencies.windows]
version = "0.52.0" 
features = [
    "Win32_Foundation", 
    "Win32_UI", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Threading", 
    "Win32_System_Memory",
    "Win32_Security"
] 
[dependencies]
sysinfo = "0.37.2"
