[package]
name = "shellcode-loader"
version = "0.9.0"
edition = "2024"

description = "shellcode加载器，通过多种方式加载shellcode并对抗EDR检测"
license = "MIT" 
authors = ["hit_ljx@yeah.net"]
repository = "https://github.com/hbesljx/shellcode-loader"
keywords = ["shellcode", "loader","binary","hook"]

[dependencies.windows]
version = "0.52.0" 
features = [
    "Win32_System_LibraryLoader", 
    "Win32_System_Threading", 
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_SystemServices", 
    "Win32_System_SystemInformation"    
] 
[dependencies]
sysinfo = "0.37.2"
clap = { version = "4.5.0", features = ["derive"] }
uuid = "1.7.0"
ntapi = "0.4.0"
image = "0.25.8"
